# gitpod-sdk-python

./: .gitignore  .stats.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  api.md  mypy.ini  pyproject.toml
.devcontainer/: Dockerfile
.github/workflows/: ci.yml  publish-pypi.yml  release-doctor.yml
examples/: anthropic_tool_use.py  run_command.py
examples/mcp-server/: .gitignore  README.md  pyproject.toml  server.py
scripts/: lint
scripts/utils/: upload-artifact.sh
src/gitpod/: __init__.py  _base_client.py  _client.py  _exceptions.py  _response.py  _streaming.py  _types.py  _version.py  pagination.py
src/gitpod/resources/: __init__.py  accounts.py  automations_files.py  editors.py  environment_automation.py  environment_classes.py  environments.py  events.py  groups.py  identity.py  personal_access_tokens.py  projects.py  runner_interaction.py  secrets.py  services.py  tasks.py  usage.py
src/gitpod/types/: __init__.py  account.py  agent_mode.py  (+154 more)
tests/: conftest.py  test_client.py  test_models.py  test_transform.py  utils.py
tests/api_resources/: test_accounts.py  test_agents.py  test_automations_files.py  test_editors.py  test_environment_automation.py  test_environment_classes.py  test_environments.py  test_events.py  test_gateways.py  test_groups.py  test_identity.py  test_organizations.py  test_personal_access_tokens.py  test_prebuilds.py  test_projects.py  test_runner_configurations.py  test_runner_interaction.py  test_runner_interactions.py  test_runners.py  test_secrets.py  test_services.py  test_tasks.py  test_usage.py  test_users.py
(+278 files in other folders)
