[project]
name = "gitpod-mcp"
version = "0.1.0"
description = "A Modal Context Protocol (MCP) server for Gitpod integration with Claude Desktop"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitpod-sdk>=0.1.2",
    "mcp>=1.2.1",
]
keywords = ["gitpod", "mcp", "claude", "anthropic", "modal-context-protocol"]
